--- a/Emotional Music/main.css
+++ b/Emotional Music/main.css
@@ -3,11 +3,19 @@ html,body{
     height: 100%;
     
 }
+h1{
+    display: flex;
+    justify-content: center;
+    font-size: 60px;
+    margin-bottom: 0%;
+    color: darkred;
+}
 body{
-    background-image: url(https://images.wallpaperscraft.com/image/river_mountains_aerial_view_137435_1920x1080.jpg);
+    background: url(https://i.imgur.com/m4GZSmC.gif);
     background-size: cover;
 }
 #container{
+    
     height: 100%;
     display: flex;
     justify-content: center;
@@ -15,14 +23,14 @@ body{
 }
 
 #selectEmotion{
-    background-color:rgba(36, 123, 255,0.4);
+    /* background-color: rgba(168, 50, 50,0.5); */
     display: flex;
     flex-direction: row;
-    height: 48%;
-    width: 80%;
+    height: 50%;
+    width: 85%;
     align-items: center;
-    justify-content: space-around;
-    border-radius: 2rem
+    justify-content: flex-start;
+    margin-top: -23%;
 }
 #emotion{
     border: 0;
@@ -32,6 +40,7 @@ body{
     font-size: 30px;
     border-radius: 1rem;
     color: #302f2f;
+    margin-left: 0.5%;
 }
 #genres{
     border: 0;
@@ -41,16 +50,10 @@ body{
     font-size: 30px;
     border-radius: 1rem;
     color: #302f2f;
+    margin-left: 0.5%;
+    border: none;   
 }
-#play{
-    border: 0;
-    background-color: rgba(252, 143, 10);
-    width: 18%;
-    height: 20%;
-    font-size: 30px;
-    border-radius: 1rem;
-    color: #302f2f;
-}
+
 #play:hover{
     cursor: pointer;
     background-color: #302f2f;
@@ -61,4 +64,37 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+}
+#vid{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#show{
+    /* background-color: rgba(168, 100, 50,0.5); */
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    width: 85%;
+    align-items: center;
+    margin-left: 7.5%;
+    margin-top: -40%;
+}
+#play{
+    border: 0;
+    background-color: rgba(252, 143, 10);
+    width: 18%;
+    height: 65px;
+    font-size: 30px;
+    border-radius: 1rem;
+    color: #302f2f;
+    margin-left: 81%;
+    margin-top:2.8%;
+}
+
+iframe{
+    display: flex;
+    margin-top: 5%;
+    height: 0%;
 }
